--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,27 @@
 <resources>
     <string name="app_name" translatable="false">Readability</string>
     <string name="btn_get_started">Get Started</string>
-    <string name="setup_1_p1_imgDescription">Readability logo</string>
-    <string name="setup_1_p1_heading">Welcome to Readability</string>
-    <string name="setup_1_p1_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
-    <string name="setup_1_p2_heading">Scan papers with your camera</string>
-    <string name="setup_1_p2_bodyText">As easy as just pointing and shooting when the build-in AI detects and tells you about scannable document. No difficult setup required. </string>
-    <string name="setup_1_p3_heading">Welcome to Readability</string>
-    <string name="setup_1_p3_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
-    <string name="back_button_description">Previous slide</string>
-    <string name="next_button_description">Next slide</string>
+    <string name="btn_previous_description">Previous slide</string>
+    <string name="btn_next_description">Next slide</string>
+
+    <string name="setup_screen_1_p1_imgDescription">Readability logo</string>
+    <string name="setup_screen_1_p1_heading">Welcome to Readability</string>
+    <string name="setup_screen_1_p1_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
+
+    <string name="setup_screen_1_p2_imgDescription">Readability logo</string>
+    <string name="setup_screen_1_p2_heading">Scan papers with your camera</string>
+    <string name="setup_screen_1_p2_bodyText">As easy as just pointing and shooting when the build-in AI detects and tells you about scannable document. No difficult setup required. </string>
+
+    <string name="setup_screen_1_p3_imgDescription">Readability logo</string>
+    <string name="setup_screen_1_p3_heading">Have the text read to you</string>
+    <string name="setup_screen_1_p3_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
+
+    <string name="setup_screen_1_p4_imgDescription">Readability logo</string>
+    <string name="setup_screen_1_p4_heading">Pair with a Braille Reader</string>
+    <string name="setup_screen_1_p4_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
+
+    <string name="setup_screen_1_p5_imgDescription">Readability logo</string>
+    <string name="setup_screen_1_p5_heading">So let\'s get started</string>
+    <string name="setup_screen_1_p5_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
+
 </resources>
