--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,12 @@
     <string name="setup_screen_2_p1_heading">Do you want to connect a Braille Reader?</string>
     <string name="setup_screen_2_p1_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
 
-    <string name="setup_screen_2_p2_imgDescription">Select your device below:</string>
-    <string name="setup_screen_2_p2_heading">Do you want to connect a Braille Reader?</string>
+    <string name="setup_screen_2_p2_imgDescription">Illustration of a Braille Reader</string>
+    <string name="setup_screen_2_p2_heading">Select your device below:</string>
     <string name="setup_screen_2_p2_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
 
+    <string name="setup_screen_2_p3_imgDescription">Illustration of a Braille Reader</string>
+    <string name="setup_screen_2_p3_heading">Device connected successfully!</string>
+    <string name="setup_screen_2_p3_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
 
 </resources>
