--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,11 @@
     <string name="setup_screen_1_p5_heading">So let\'s get ut setup</string>
     <string name="setup_screen_1_p5_bodyText">So what are we waiting for? Let\'s configure the app so it can be used.</string>
 
-    <string name="setup_screen_2_p1_imgDescription">Illustration of a Braille Reader</string>
+    <string name="setup_screen_2_p1_imgDescription">Illustration of a Braille Reader with a plus</string>
     <string name="setup_screen_2_p1_heading">Do you want to connect a Braille Reader?</string>
     <string name="setup_screen_2_p1_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
 
-    <string name="setup_screen_2_p2_imgDescription">Illustration of a Braille Reader</string>
+    <string name="setup_screen_2_p2_imgDescription">Illustration of a Braille Reader with a Bluetooth icon</string>
     <string name="setup_screen_2_p2_heading">Select your device below</string>
     <string name="setup_screen_2_p2_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>
 
